# posit-neuralnet

./: .gitignore  README.md
examples/: CMakeLists.txt  build.sh
examples/mnist_fcnn/: CMakeLists.txt
examples/mnist_fcnn/include/: test_bfloat.hpp  test_float16.hpp  test_float8.hpp  train_bfloat.hpp  train_float16.hpp  train_float8.hpp
examples/mnist_fcnn/src/: train_bfloat.cpp  train_float16.cpp  train_float8.cpp  train_posit.cpp  train_posit16.cpp
examples/mnist_lenet5/: CMakeLists.txt
examples/mnist_lenet5/include/: test_bfloat.hpp  test_float.hpp  test_float16.hpp  test_float8.hpp  train_bfloat.hpp  train_float.hpp  train_float16.hpp  train_float8.hpp
examples/mnist_lenet5/src/: test_posit.cpp  train_bfloat.cpp  train_float.cpp  train_float16.cpp  train_float8.cpp  train_posit.cpp  train_posit16.cpp
